; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_engctx.c__nouveau_engctx_ctor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_engctx.c__nouveau_engctx_ctor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nouveau_oclass = type { i32 }
%struct.nouveau_engctx = type { i32 }

@NVOBJ_FLAG_ZERO_ALLOC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_nouveau_engctx_ctor(%struct.nouveau_object* %0, %struct.nouveau_object* %1, %struct.nouveau_oclass* %2, i8* %3, i32 %4, %struct.nouveau_object** %5) #0 {
  %7 = alloca %struct.nouveau_object*, align 8
  %8 = alloca %struct.nouveau_object*, align 8
  %9 = alloca %struct.nouveau_oclass*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.nouveau_object**, align 8
  %13 = alloca %struct.nouveau_engctx*, align 8
  %14 = alloca i32, align 4
  store %struct.nouveau_object* %0, %struct.nouveau_object** %7, align 8
  store %struct.nouveau_object* %1, %struct.nouveau_object** %8, align 8
  store %struct.nouveau_oclass* %2, %struct.nouveau_oclass** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store %struct.nouveau_object** %5, %struct.nouveau_object*** %12, align 8
  %15 = load %struct.nouveau_object*, %struct.nouveau_object** %7, align 8
  %16 = load %struct.nouveau_object*, %struct.nouveau_object** %8, align 8
  %17 = load %struct.nouveau_oclass*, %struct.nouveau_oclass** %9, align 8
  %18 = load i32, i32* @NVOBJ_FLAG_ZERO_ALLOC, align 4
  %19 = call i32 @nouveau_engctx_create(%struct.nouveau_object* %15, %struct.nouveau_object* %16, %struct.nouveau_oclass* %17, i32* null, i32 256, i32 256, i32 %18, %struct.nouveau_engctx** %13)
  store i32 %19, i32* %14, align 4
  %20 = load %struct.nouveau_engctx*, %struct.nouveau_engctx** %13, align 8
  %21 = call %struct.nouveau_object* @nv_object(%struct.nouveau_engctx* %20)
  %22 = load %struct.nouveau_object**, %struct.nouveau_object*** %12, align 8
  store %struct.nouveau_object* %21, %struct.nouveau_object** %22, align 8
  %23 = load i32, i32* %14, align 4
  ret i32 %23
}

declare dso_local i32 @nouveau_engctx_create(%struct.nouveau_object*, %struct.nouveau_object*, %struct.nouveau_oclass*, i32*, i32, i32, i32, %struct.nouveau_engctx**) #1

declare dso_local %struct.nouveau_object* @nv_object(%struct.nouveau_engctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
